Fix image clipping

--- a/pages/components/TitlePage/titlepage.module.css
+++ b/pages/components/TitlePage/titlepage.module.css
@@ -13,8 +13,8 @@
 
 .wrapper > img {
   position: absolute;
-  width: 100%;
-  height: 100vh;
+  width: calc(100% - 2px);
+  height: calc(100vh - 2px);
   max-height: unset;
   top: 0;
   bottom: 0;
@@ -22,6 +22,7 @@
   right: 0;
   object-fit: cover;
   z-index: -2;
+  margin: 0 auto;
 }
 
 .wrapper::after {
